--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         Hi, I am <strong>Abimbola Otegbayo</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
-      <img src="./images/heroimage.jpeg" alt="Picture of Abimbola smiling">
+      <img src="./images/heroimage.jpeg" width="500" height="auto" alt="Picture of Abimbola smiling" class="intro__img">
     </section>
 
     <!--My Services-->
