--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <!--Introduction-->
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I am <strong>Abimbola Otegbayo</strong>
+        Hello, I am <strong>Abimbola Otegbayo</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
-      <img src="./images/heroimage.jpeg" width="500" height="auto" alt="Picture of Abimbola smiling" class="intro__img">
+      <p class="section__subtitle section__subtitle--intro">FRONT-END DEVELOPER</p>
+      <img src="./images/heroimage.jpeg" width="500" height="340" alt="Picture of Abimbola smiling" class="intro__img">
     </section>
 
     <!--My Services-->
