--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <!--Introduction-->
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hello, I am <strong>Abimbola Otegbayo</strong>
+        Hi, I am <strong>Abimbola Peace </strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">FRONT-END DEVELOPER</p>
-      <img src="./images/heroimage.jpeg" width="500" height="340" alt="Picture of Abimbola smiling" class="intro__img">
+      <img src="./images/heroimage.jpeg"  alt="Picture of Abimbola smiling" class="intro__img">
     </section>
 
     <!--My Services-->
@@ -93,14 +93,17 @@
           <h3>Academic writing</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quibusdam delectus nobis. Numquam velit harum quis tempora voluptatibus veniam quia inventore quidem consequatur ab repellat rem dolores, fugit, itaque voluptate.</p>
         </div>
+        <button class="btn">My work</button>
       </div> 
     </section>
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about"> Web Developer and Writer based in Ibadan, Nigeria </p>
+      <p class="section__subtitle section__subtitle--about"> Web Developer and Writer in Nigeria </p>
       <div class="about-me__body">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex consectetur repudiandae dolorem similique porro sapiente a id, rem, beatae eius nisi blanditiis natus, pariatur iste ipsa! Rerum repellendus odio repudiandae?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex consectetur repudiandae dolorem similique porro sapiente a id, rem, beatae eius nisi blanditiis natus, pariatur iste ipsa! Rerum repellendus odio repudiandae?</p>
       </div>
+      <img src="./images/20230118_145255.jpg" alt="Abimbola hearty laughter" class="about-me__img">
     </section>
     <!--My work-->
     <section class="my-work" id="work">
