--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--Introduction-->
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I am <strong>Abimbola Peace </strong>
+        Hi, I am <strong>Abimbola Otegbayo </strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">FRONT-END DEVELOPER</p>
       <img src="./images/heroimage.jpeg"  alt="Picture of Abimbola smiling" class="intro__img">
@@ -107,8 +107,8 @@
     </section>
     <!--My work-->
     <section class="my-work" id="work">
-      <h2 class="section__title">My work</h2>
-      <p class="section__subtitle"></p>
+      <h2 class="section__title section__title--work">My work</h2>
+      <p class="section__subtitle">Projects I have worked on</p>
 
       <div class="portfolio">
         <!--Portfolio Item 01-->
