--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
           <a href="#services">services</a>
         </li>
         <li>
-          <a href="#projects">projects</a>
+          <a href="#about">about</a>
+        </li>
+        <li>
+          <a href="#work">projects</a>
         </li>
         <li>
           <a href="#contact">contact</a>
@@ -108,7 +111,7 @@
     <!--My work-->
     <section class="my-work" id="work">
       <h2 class="section__title section__title--work">My work</h2>
-      <p class="section__subtitle">Projects I have worked on</p>
+      <p class="section__subtitle"></p>
 
       <div class="portfolio">
         <!--Portfolio Item 01-->
@@ -130,8 +133,13 @@
     </div>
     </section>
 
-    <footer>
-      <a href="mailto:abimbola.peace131@gmail.com" class="footer__link">abimbola.peace131@gmail.com</a>
+    <section class="my-contact" id="contact">
+      <h2 class="section__title--contact">Impressed? Want to say Hi?</h2>
+      <p>Send a mail to us at <a href="mailto:abimbola.peace131@gmail.com" class="contact__link">abimbola.peace131@gmail.com</a></p>
+    </section>
+
+    <footer class="footer">
+      <p>Copyright &copy;2023 </p>
     </footer>
     <!-- javascript -->
     <script src="app.js"></script>
