--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h3>Academic writing</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quibusdam delectus nobis. Numquam velit harum quis tempora voluptatibus veniam quia inventore quidem consequatur ab repellat rem dolores, fugit, itaque voluptate.</p>
         </div>
-        <button class="btn">My work</button>
+        <!-- <button class="btn">My work</button> -->
       </div> 
     </section>
     <section class="about-me" id="about">
