Added new projects

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
           <h3>Content writing</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas saepe reiciendis libero nesciunt pariatur itaque minima voluptatem. Cum, est unde atque facere, quod cupiditate deserunt soluta tenetur, omnis magnam assumenda?</p>
         </div>
-        <div class="service">
+        <!-- <div class="service">
           <h3>Academic writing</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quibusdam delectus nobis. Numquam velit harum quis tempora voluptatibus veniam quia inventore quidem consequatur ab repellat rem dolores, fugit, itaque voluptate.</p>
-        </div>
+        </div> -->
         <!-- <button class="btn">My work</button> -->
       </div> 
     </section>
@@ -103,8 +103,8 @@
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about"> Web Developer and Writer in Nigeria </p>
       <div class="about-me__body">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex consectetur repudiandae dolorem similique porro sapiente a id, rem, beatae eius nisi blanditiis natus, pariatur iste ipsa! Rerum repellendus odio repudiandae?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex consectetur repudiandae dolorem similique porro sapiente a id, rem, beatae eius nisi blanditiis natus, pariatur iste ipsa! Rerum repellendus odio repudiandae?</p>
+        <p>I am a passionate front end developer looking to provide solutions to the common-man's problems with the power of technology. I believe that technlogy has a alot moe to offer than we already know.</p>
+        <p>In light of this, I intend to be a part of the solution providers who make things happen by offering cutting-edge and pixel perfect front-end software development services .</p>
       </div>
       <img src="./images/20230118_145255.jpg" alt="Abimbola hearty laughter" class="about-me__img">
     </section>
@@ -114,28 +114,37 @@
       <p class="section__subtitle"></p>
 
       <div class="portfolio">
-        <!--Portfolio Item 01-->
-        <a href="#" class="portfolio__item">
-          <img src="./images/ColourFlipper.png" alt="" class="portfolio_img">
-        </a>
-      <!--Portfolio Item 02-->
-        <a href="#" class="portfolio__item">
-          <img src="./images/Cakeit.png" alt="" class="portfolio_img">
+        
+      <!--Portfolio Item 01-->
+      <a href="https://abimbolap.github.io/Todo/" class="portfolio__item">
+        <img src="./images/Todo.png" alt="" class="portfolio_img">
+      </a>
+        <!--Portfolio Item 02-->
+        <a href="https://reviewproduct.netlify.app/" class="portfolio__item">
+          <img src="./images/ReviewApp.png" alt="Image of A review app" class="portfolio_img">
         </a>
         <!--Portfolio Item 03-->
-        <a href="#" class="portfolio__item">
-          <img src="./images/SignUp.png" alt="" class="portfolio_img">
+        <a href="https://styleinnwebsite.netlify.app/" class="portfolio__item">
+          <img src="./images/StyleInn.png" alt="Image of a fashion e-store" class="portfolio_img">
         </a>
-        <!--Portfolio Item 04-->
-        <a href="#" class="portfolio__item">
-          <img src="./images/Counter.png" alt="" class="portfolio_img">
+         <!--Portfolio Item 04-->
+         <a href="abimbolap.github.io/Cake-it/" class="portfolio__item">
+          <img src="./images/Cakeit.png" alt="Image of a landing page for a bakery" class="portfolio_img">
+        </a>
+         <!--Portfolio Item 05-->
+         <a href="#" class="portfolio__item">
+          <img src="./images/ColourFlipper.png" alt="A colour flipper app" class="portfolio_img">
+        </a>
+         <!--Portfolio Item 06-->
+         <a href="#" class="portfolio__item">
+          <img src="./images/Counter.png" alt="A counter app" class="portfolio_img">
         </a>
     </div>
     </section>
 
     <section class="my-contact" id="contact">
-      <h2 class="section__title--contact">Impressed? Want to say Hi?</h2>
-      <p>Send a mail to us at <a href="mailto:abimbola.peace131@gmail.com" class="contact__link">abimbola.peace131@gmail.com</a></p>
+      <h2 class="section__title--contact">Impressed? Let's Talk</h2>
+      <p>Send a mail to me at <a href="mailto:abimbola.peace131@gmail.com" class="contact__link">abimbola.peace131@gmail.com</a></p>
     </section>
 
     <footer class="footer">
