--- a/index.html
+++ b/index.html
@@ -85,12 +85,8 @@
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
         <div class="service">
-          <h3>Web development</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium voluptatem aut voluptate exercitationem aliquam laboriosam dolorum, reiciendis veritatis tempora debitis aspernatur, sapiente maxime sed ab obcaecati tempore id. Dolorem, quaerat.</p>
-        </div>
-        <div class="service">
-          <h3>Content writing</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas saepe reiciendis libero nesciunt pariatur itaque minima voluptatem. Cum, est unde atque facere, quod cupiditate deserunt soluta tenetur, omnis magnam assumenda?</p>
+          <h3>Front-End Web development</h3>
+          <p> Using technical tools which include HTML, CSS, JavaScript and ReactJS library to creating pixel-perfect and responsive websites and web applications that are user-centered.  </p>
         </div>
         <!-- <div class="service">
           <h3>Academic writing</h3>
@@ -103,7 +99,7 @@
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about"> Web Developer and Writer in Nigeria </p>
       <div class="about-me__body">
-        <p>I am a passionate front end developer looking to provide solutions to the common-man's problems with the power of technology. I believe that technlogy has a alot moe to offer than we already know.</p>
+        <p>I am a front end developer looking to provide solutions to the common-man's problems with the power of technology.I'm passionate about creating great user experiences and have a strong understanding of usability and accessibility standards. I believe that technology has a lot more to offer than we already know.</p>
         <p>In light of this, I intend to be a part of the solution providers who make things happen by offering cutting-edge and pixel perfect front-end software development services .</p>
       </div>
       <img src="./images/20230118_145255.jpg" alt="Abimbola hearty laughter" class="about-me__img">
@@ -116,27 +112,27 @@
       <div class="portfolio">
         
       <!--Portfolio Item 01-->
-      <a href="https://abimbolap.github.io/Todo/" class="portfolio__item">
+      <a href="https://abimbolatodo.netlify.app/"  target="_blank" class="portfolio__item">
         <img src="./images/Todo.png" alt="" class="portfolio_img">
       </a>
         <!--Portfolio Item 02-->
-        <a href="https://reviewproduct.netlify.app/" class="portfolio__item">
+        <a href="https://reviewproduct.netlify.app/" target="_blank" class="portfolio__item">
           <img src="./images/ReviewApp.png" alt="Image of A review app" class="portfolio_img">
         </a>
         <!--Portfolio Item 03-->
-        <a href="https://styleinnwebsite.netlify.app/" class="portfolio__item">
+        <a href="https://styleinnwebsite.netlify.app/" target="_blank"  class="portfolio__item">
           <img src="./images/StyleInn.png" alt="Image of a fashion e-store" class="portfolio_img">
         </a>
          <!--Portfolio Item 04-->
-         <a href="abimbolap.github.io/Cake-it/" class="portfolio__item">
+         <a href="https://cakeit.netlify.app/" target="_blank" class="portfolio__item">
           <img src="./images/Cakeit.png" alt="Image of a landing page for a bakery" class="portfolio_img">
         </a>
          <!--Portfolio Item 05-->
-         <a href="#" class="portfolio__item">
+         <a href="#" target="_blank" class="portfolio__item">
           <img src="./images/ColourFlipper.png" alt="A colour flipper app" class="portfolio_img">
         </a>
          <!--Portfolio Item 06-->
-         <a href="#" class="portfolio__item">
+         <a href="#" target="_blank"  class="portfolio__item">
           <img src="./images/Counter.png" alt="A counter app" class="portfolio_img">
         </a>
     </div>
